package com.clt.matlink.modules.outstock.mapper;

import com.clt.matlink.common.mybatis.mapper.BaseMapperPlus;
import com.clt.matlink.modules.outstock.domain.entity.OutStock;

public interface OutStockMapper extends BaseMapperPlus<OutStock, OutStock> {
}
